2008-11-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (THREAD-INTERRUPT): avoid a deadlock when a terminated
	thread is interrupted multiple times

2008-11-17  Sam Steingold  <sds@gnu.org>

	Remove TIME_RELATIVE, TIME_UNIX_TIMES, TIME_METHOD=1;
	assume either gettimeofday or ftime is present on a Unix system
	* Makefile.devel (gnulib-imported): also get gettimeofday
	* m4/gettimeofday.m4, m4/times.m4: remove
	* configure.in: call AC_PROG_MKDIR_P, gl_FUNC_GETTIMEOFDAY,
	gl_HEADER_SYS_TIME_H; do not call CL_GETTIMEOFDAY and CL_TIMES_CLOCK
	* constobj.d (start_UT) [TIME_RELATIVE]: remove
	* lisparit.d (make_random_state) [TIME_UNIX_TIMES]: drop get_real_time
	* lispbibl.d (TIME_ABSOLUTE, TIME_RELATIVE, TIME_UNIX_TIMES)
	(TIME_METHOD): remove
	* spvw_gcstat.d (gc_time): remove TIME_METHOD conditionals
	* spvw_sigsegv.d (print_mem_stats): ditto
	* time.d (TIME_RELATIVE, TIME_UNIX_TIMES, TIME_METHOD==1):
	remove all code for these conditionals
	* unixaux.d (gettimeofday): remove emulation (rely on gnulib)
	* unix.d: assume HAVE_GETTIMEOFDAY
	* gllib/gettimeofday.c, sys_time.in.h, gettimeofday.m4, sys_time_h.m4:
	add

2008-11-17  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_lend_handle): fix a GC-safety bug

2008-11-17  Sam Steingold  <sds@gnu.org>

	assume POSIX signal()
	* m4/signal.m4 (CL_TYPE_SIGNAL): remove
	(CL_SIGACTION_REINSTALL, CL_SIGACTION_UNBLOCK): do not require it
	* configure.in: do not call it
	* unix.d (signal_handler_t): use a POSIX-compatible declaration

2008-11-17  Sam Steingold  <sds@gnu.org>

	fix module compilation after [threads1] merge
	* lispbibl.d (clisp_thread_t): move _writing_to_subprocess up
	before _mv_space and export it to clisp.h
	(mv_space) [MULTITHREAD]: export to clisp.h
	(HAVE_SIGNALS): no need to export to clisp.h anymore
	(START_WRITING_TO_SUBPROCESS, STOP_WRITING_TO_SUBPROCESS):
	define and export to clisp.h
	* modules/clx/new-clx/clx.f, modules/rawsock/rawsock.c: