@@ -1,3 +1,7 @@
+2008-11-18  Sam Steingold  <sds@gnu.org>
+
+	* zthread.d (check_thread): do not eval() the user supplied value
+
 2008-11-17  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	* zthread.d (THREAD-INTERRUPT): avoid a deadlock when a terminated
